# vocal

./: .flake8  .gitignore  .version  CHANGELOG.md  ECDC_assigned_variants.csv  LICENSE  README.md  environment.yml  lineages.all.tsv  main.nf  nextflow.config  pyproject.toml  table_cov2_mutations_annotation.tsv  variant_table.tsv  variants_with_phenotypes.tsv
config/: conda.config  local.config  nodes.config
data/: .db_version  .version  ECDC_assigned_variants.csv  README.md  SARS-CoV-2_assigne_variant.csv  lineage.all.tsv  sergei_extracted.2021-05-17.csv  table_cov2_mutations_annotation.PS.tsv  table_cov2_mutations_annotation.tsv
data/2021-09/: lineage.all.tsv
data/2022-11/: ECDC_assigned_variants.csv  lineage.all.tsv  table_cov2_mutations_annotation.tsv
data/fixformat/: new_fix_deletion.csv
email-template/: email-error.txt  email.PS.html  email.html  email.sum.html
envs/: annotation.yml  psl.yml  report.yml  vocal.yml
modules/local/: annotation.nf  preprocess.nf  psl.nf  report.nf  (+1 more)
result/: R-error-output.txt  prediction-overview.txt  vocal-alerts-clusters-summaries-all.csv
templates/: email-empty-msg.txt  email-msg.txt  email.html  email.sum.html
test/: sample-test.fasta
test-data/: meta - Kopie.tsv  meta.tsv  sample.psl  sample.test - Kopie.fasta
vocal/: AnnotateVariants.py  Mutations2Function.py  PSL_helper.py  Reporter.py  Script_VOCAL_simple_no_lineage.R  Script_VOCAL_unified.PS.R  Script_VOCAL_unified.R  Selector.py  VOCAL-ML.py  aligner.py  data_loader_tmp.py  update.lineages.py  update.vocalDB.py  vocal.py
workflows/: viruswarn-sc2.nf  vocal.nf
(+4 files in other folders)
